Worked on Bank Account App

--- a/bankaccount/index.html
+++ b/bankaccount/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M13 Assignment - The Bank Account Application</title>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <h1>The Bank Account Application</h1>
+    <div id="welcome" class="flex-container">
+        <button type="button" id="name" value="Name" >Name</button>
+        <button type="button" id="deposit" value="Deposit" >Deposit</button>
+        <button type="button" id="withdrawal" value="Withdrawal" >Withdrawal</button>
+        
+    </div>
+
+    <div id="accountActivity" class="flex-container">
+
+
+    </div>
 </body>
 </html>
